--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "setup": "node setup.js"
+    "setup": "node setup.js",
+    "dev": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -28,5 +29,8 @@
     "dotenv": "^16.4.5",
     "fastify": "^4.27.0",
     "permitio": "^2.4.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.7"
   }
 }
